<resources>
    <string name="app_name">PDBotonera</string>
    <string name="main_cashier">Biyuya</string>
    <string name="main_resfriadinho">Resfriadinho</string>
    <string name="main_reload_shotgun">Cargar bala</string>
    <string name="main_shot">Tiro</string>
    <string name="main_normal_clapping">Normal Clapping</string>
    <string name="main_applause">Aplausos</string>
    <string name="main_machineGun">Ametralladora</string>
    <string name="main_drummer">Redoblante</string>
</resources>