<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/normalClapping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_normal_clapping"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/applause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_applause"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/cashier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_cashier"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/cockingGun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_reload_shotgun"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/shotSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_shot"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/machineGun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_machineGun"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/resfriadinho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_resfriadinho"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

    <Button
        android:id="@+id/drummer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_drummer"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_700"></Button>

</LinearLayout>